--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -30,9 +30,14 @@
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
-  }
+    transform: rotate(0deg); */
+  /* }
   to {
     transform: rotate(360deg);
   }
+} */
+footer{
+  margin : 0 auto;
+  text-align: center;
+  margin-top: 20px;
 }
